# toy-ecom-site

./: .gitignore  README.md  app.py  pyproject.toml  schema.sql
static/stylesheets/: app.css
templates/: cart.html  index.html  layout.html  product_page.html  sign_in.html  sign_up.html  user_history.html
tests/: purchases.yml  test_app.py
toy-ecom/: inventory.yml
toy_ecom/: database_persistence.py  purchases.yml  users.yml
